                    --------------------
This file should be used by the test developer to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

test30-V10-00-00  26 March 2014 G.Folger
- CMakeLists.txt: allow to build test30 standalone, 
    without GEANT4_ENABLE_TESTING=ON
	 
test30-V09-06-05  10 May 2013 V.Ivanchenko
- Cleanup headers

test30-V09-06-04  9 May 2013 V.Ivanchenko
- Added initialisation of ion tables

test30-V09-06-03  19 December 2012 V.Ivanchenko
- Removed LHEP and RPG

test30-V09-06-02  13 December 2012 V.Ivanchenko
- Removed obsolete CHIPS header

test30-V09-06-01  10 December 2012 V.Ivanchenko
- Removed obsolete interfaces to QGSP, QGSC, QGSB

test30-V09-06-00  10 December 2012 V.Ivanchenko
- Removed dependences on CHIPS

test30-V09-05-17  05 November 2012 V.Ivanchenko
- Fixed variable shadowing 

test30-V09-05-16  09 October 2012 G.Cosmo
- Explicit inclusion of units and constants headers.
- Restored CMakeLists.txt as in tag test30-V09-05-11.

test30-V09-05-15  11 August 2012 V.Ivanchenko
- removed CMakeLists.txt 

test30-V09-05-14  11 August 2012 V.Ivanchenko
- delete unapropriate directory physval

test30-V09-05-13  31 July 2012 A. Dotti
- Bug fix for test name in CMakeLists.txt for PhysicsChecks 

test30-V09-05-12  11 July 2012 A. Dotti
- Adding first support for ctest PhysicsChecks validation

test30-V09-05-11  30 May 2012 V.Ivanchenko
- Test30VSecondaryGenerator - use integer Z and A

test30-V09-05-10  24 May 2012 V.Ivanchenko
- G4INCLXXInterface is back to standard design

test30-V09-05-09  23 May 2012 V.Ivanchenko
- Histo - fixed n-tuples

test30-V09-05-08  21 May 2012 V.Ivanchenko
- test30.cc - fixed warnings of gcc 4.7
- GNUmakefile - removed statements for analysis 
