@@ -1,0 +1,37 @@
+//---------------------------------------
+//        Macro file for test30
+//         examine PostStepDoIt 
+//        for hadronic physics
+//      Created: 13.03.2002 V.Ivanchenko
+//--------------------------------------- 
+#verbose
+0
+#events
+100000
+#print
+100
+#particle
+proton
+//--------
+#material
+G4_C
+#targetA
+12
+#energy(MeV)
+157000
+#sigmae(MeV)
+2.0
+#emax(MeV)
+100000
+#nbinse
+25
+#nbinsd
+25
+#nangle
+5
+#angles
+30. 60. 90. 120. 150.  
+#generator
+ftfp
+#run
+#exit
